# prycat

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
prycat/: __init__.py  __main__.py  app.py  models.py  reader.py  theme.py
prycat/widgets/: filter_bar.py  log_detail.py  log_table.py  main_window.py  toolbar.py
