[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prycat"
version = "0.1.0"
description = "High-performance ADB logcat GUI viewer with real-time streaming and filtering"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["PySide6>=6.6"]

[project.scripts]
prycat = "prycat:main"

[tool.setuptools.packages.find]
include = ["prycat*"]
